web-docs/okd-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gai-cti-docs
  namespace: gai-cti-docs-project
spec:
  selector:
    app: gai-cti-docs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
