web-docs/okd-deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gai-cti-docs
  namespace: gai-cti-docs-project
spec:
  to:
    kind: Service
    name: gai-cti-docs
  port:
    targetPort: http
  tls:
    termination: edge
